# unifi-doorbell-notifier

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml  release-artifact.yml  release-please.yml  test.yml
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: Ringing.tsx
frontend/src/adapter/: Client.ts
src/: main.rs
src/client/: authenticator.rs  endpoint.rs  mod.rs  types_bootstrap.rs  types_image.rs  types_update_camera.rs
src/command/: config_path.rs  init.rs  mod.rs  serve.rs
src/config/: mod.rs
src/config/testdata/: invalid.yaml  valid.yaml  valid_full_options.yaml
src/listener/: mac_address.rs  mod.rs
src/server/: mod.rs
src/server/api/: mod.rs
src/server/frontend/: mod.rs
src/server/frontend/assets/: index.html
src/server/frontend/assets/_dist_/: App.js  Ringing.css  Ringing.css.proxy.js  Ringing.js  index.css  index.css.proxy.js  index.js  reset.css  reset.css.proxy.js
src/server/frontend/assets/_dist_/adapter/: Client.js
src/server/frontend/assets/_snowpack/: optimize-manifest.json
src/server/frontend/assets/_snowpack/pkg/: import-map.json  preact-async-route.js  preact-router.js  preact.js
src/server/frontend/assets/_snowpack/pkg/common/: preact.module-87ab60fc.js  (+1 more)
src/server/frontend/assets/assets/: Ringing.445c4a85.css  Ringing.ade0c845.js  index.d5e64c52.css  index.db03592b.js  vendor.2869d34b.js
ui/: .env.dev  .env.production  index.html  package-lock.json  package.json
ui/src/: Ringing.tsx  app.tsx  config.ts  env.d.ts  main.tsx
ui/src/adapter/: Client.ts
(+2 files in other folders)
