[package]
name = "unifi-doorbell-notifier"
version = "0.0.6"
edition = "2021"

[features]

[dependencies]
actix-cors = "0.5.4"
actix-files = "0.5.0"
actix-web = "3.3.3"
anyhow = { version = "1.0.52", features = ["backtrace"] }
bytes = "1.1.0"
chan = "0.1.23"
chan-signal = "0.3.3"
chrono = "0.4.19"
config = "0.11.0"
dirs = "4.0.0"
env_logger = "0.9.0"
jsonwebtoken = "7.2.0"
log = "0.4.14"
mac_address = "1.1.2"
mime_guess = "2.0.3"
portpicker = "0.1.1"
reqwest = { version = "0.11.8", features = ["json", "blocking", "cookies"] }
rust-embed = "6.3.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
structopt = "0.3.25"
webbrowser = "0.5.5"

[dev-dependencies]
actix-rt = "2.5.1"
